@@ -47,6 +47,9 @@ current-context: EKS-Cluster-Grupo1-UTEC
       userarn: arn:aws:iam::634178970039:user/user-grupo1-utec
       username: user-grupo1-utec
 
+      RUN yum install -y java-1.8.0-openjdk
+      CMD java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -java ConciliacionApplication.java
+
 
 
 
